# allez-plus-loin-avec-le-framework-django

./: .gitignore  README.md  pyproject.toml
authentication/: forms.py  models.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/authentication/: login.html  password_change_done.html  password_change_form.html  signup.html
blog/: views.py
blog/templates/blog/: home.html
fotoblog/: settings.py  urls.py
templates/: base.html
