[project]
name = "fotoblog"
version = "0.1.0"
description = ""
authors = [
    {name = "Nelson Jesus",email = "n.jesus@tracknco.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "ruff (>=0.15.10,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
